--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "OurLive\\": "app/"
         },
         "classmap": [
             "database/seeds",
