--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/cashier": "^11.2",
         "laravel/framework": "^7.0",
+        "laravel/socialite": "^4.4",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "nesbot/carbon": "^2.32"
+        "nesbot/carbon": "^2.32",
+        "socialiteproviders/twitter": "^3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
